# throttling_sequencer_webapp

./: DEVELOPMENT.md  README.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.multi-db.dev.yml  docker-compose.multi-db.yml  docker-compose.yml  pyproject.toml  svcs_notes.md
throttling_sequencer_fastapi/: .dockerignore  Dockerfile  README.md  TODO.md  manage.py  package_sanity_check.sh  pyproject.toml
throttling_sequencer_fastapi/tests/fake_implementations/di/: ajustable_registrar.py  app_registrar_providers.py
throttling_sequencer_fastapi/throttling_sequencer/: app.py
throttling_sequencer_fastapi/throttling_sequencer/api/context/: constants.py  request.py
throttling_sequencer_fastapi/throttling_sequencer/api/graphql/: router.py
throttling_sequencer_fastapi/throttling_sequencer/application/: __init__.py  execution_context.py  token_extractor.py
throttling_sequencer_fastapi/throttling_sequencer/core/: database_config.py  log_config.py  log_config_json.json  telemetry.py  uvicorn_log_config.py  uvicorn_server_config.py
throttling_sequencer_fastapi/throttling_sequencer/di/: app_registrar_providers.py  app_wide_registrar.py  fastapi_composition.py  fastapi_lifespan.py  game_state.py  navigation.py  provider.py  registry.py  registry_builder.py  repositories.py  services.py
throttling_sequencer_fastapi/throttling_sequencer/di/registrars/: auth.py  base.py  (+3 more)
throttling_sequencer_fastapi/throttling_sequencer/domain/: infrastructure_setup.py
throttling_sequencer_fastapi/throttling_sequencer/services/: __init__.py  throttle_steps_service.py
(+133 files in other folders)
